5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1717_2525.log
== TEST (2019-05-16 15:18:21) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i<=x**(1/2)and i%!=0):
	x = x/i%0
	i = i+1
print(x)
	if(i<=**(1/2)):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 4
    while(i<=x**(1/2)and i%!=0):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:19:06) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i<=x**(1/2)and i%!=0):
	x = x/i%0
	i = i+1
print(x)
	if(i<=**(1/2)):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 4
    while(i<=x**(1/2)and i%!=0):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:19:37) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i%!=0):
	x = x/i%0
	i = i+1
print(x)
	if(i<=**(1/2)):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 4
    while(i%!=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:19:51) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i !=0):
	x = x/i%0
	i = i+1
print(x)
	if(i<=**(1/2)):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 8
    if(i<=**(1/2)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:14) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i !=0):
	x = x/i%0
	i = i+1
print(x)
	if(i<x):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 8
    if(i<x):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:27) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i !=0):
	x = x/i%0
	i = i+1
	print(x)
	if(i<x):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 9
    print(x "divisores")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:57) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i !=0):
	x = x/i%0
	i = i+1
	print(x)
	if(i<x):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 9
    print(x "divisores")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:16) 
-- CODE:
x = int(input("valor de x:"))
i = 1
from math import*
while(i !=0):
	x = x/i%0
	i = i+1
	print(x)
	if(i<x):
		print(x "divisores")
	else:
		print("1 divisor" )

-- ERROR:
File "XXXX", line 9
    print(x "divisores")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:36:28) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(n%i==0):
	i=i+1
	valor = valor/i
	print(valor)
	
-- OUTPUT:
6.0
2.0
0.5
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:37:31) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(n%i==0):
	valor = valor/i
	i = i+1
	print(valor)
	
-- OUTPUT:
12.0
6.0
2.0
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:37:54) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(n%i==0):
	valor = valor/i
	i = i+1
	print(valor)
	
-- OUTPUT:
12.0
6.0
2.0
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:38:37) 
-- CODE:
n = int(input("valor de n: "))
i = 0
valor = n
while(n%i==0):
	valor = valor/i
	i = i+1
	print(valor)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n%i==0):
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:40:12) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(n%i==0):
	valor = valor/i
	i = i+1
	print(valor)
	
-- OUTPUT:
12.0
6.0
2.0
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:40:34) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(n%i==0):
	valor = valor/i
	i = i+1
	print(valor)
	
-- OUTPUT:
12.0
6.0
2.0
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:43:55) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(i<n):
	if(n%i == 0):
		valor = valor/i
		i = i+1
		print(valor)
	else:
		valor = valor//i
		i=i+1
		print(valor)
	
-- OUTPUT:
12.0
6.0
2.0
0.5
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:44:35) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(i<n):
	if(n%i == 0):
		valor = valor/i
		i = i+1
		print(valor)
	else:
		valor = valor%i
		i=i+1
		print(valor)
	
-- OUTPUT:
12.0
6.0
2.0
0.5
0.5
0.08333333333333333
0.08333333333333333
0.08333333333333333
0.08333333333333333
0.08333333333333333
0.08333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:45:16) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(i<n):
	if(n%i == 0):
		valor = valor/i
		i = i+1
	print(valor)
	else:
		valor = valor%i
		i=i+1
	print(valor)
	
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:45:44) 
-- CODE:
n = int(input("valor de n: "))
i = 1
valor = n
while(i<n):
	if(n%i == 0):
		valor = valor/i
		i = i+1
		#print(valor)
	else:
		valor = valor%i
		i=i+1
print(valor)
	
-- OUTPUT:
0.08333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
